--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,25 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:               Zhengsong Huang
+tagline:             'QAQ'
+description:         'Hope is a good thing, maybe the best of things. And no good thing ever dies.'
 url:                 hwyl.run
 baseurl:             ''
 paginate:            5
+paginate_path:       '/blogs/page:num'
 permalink:           pretty
+# timezone:            Asia/Shanghai
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Zeus Huang
+  url:               https://github.com/Hwylzeus
+  email:             huangzhs8@mail2.sysu.edu.cn
 
 # Gems
 plugins:
   - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-feed
 
 # Custom vars
 version:             1.1.0
@@ -23,3 +27,7 @@ google_analytics_id: #UA-XXXX-Y
 
 encoding: utf-8
 highlighter: rouge
+minima:
+  date_format: "%b %-d, %Y"
+
+# theme: minima
