--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink:           pretty
 # About/contact
 author:
   name:              Wilson Huang
-  url:               https://github.com/Wilsooon
+  url:               https://github.com/wi1sonh
   email:             huangzhs8@mail2.sysu.edu.cn
 
 # Gems
